<resources>
    <string name="app_name">Galery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="photo_deletion">Photo deletion</string>
    <string name="favorite_photo">Favorite photo</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="empty_field">Field is required</string>
    <string name="invalid_email">Incorrect Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="logged_in_description">You are logged in as</string>
    <string name="send_photo_to_server">Send photo to server</string>
    <string name="load_photo_from_server">Load photo from server</string>
    <string name="logout">Logout</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="shooting_time">Shooting time</string>
</resources>